fix email overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,7 +155,7 @@ tr:nth-child(even) {
 .content-stripe {
   color: var(--font-color);
   background-color: white;
-  padding: 50px 80px;
+  padding: 50px 30px;
 }
 
 .content-stripe-thin {
@@ -245,5 +245,11 @@ tr:nth-child(even) {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+  }
+
+  .content-stripe {
+    color: var(--font-color);
+    background-color: white;
+    padding: 50px 80px;
   }
 }
